# Quip_Bot

./: .env.example  .env.prod.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CONFIGURATION.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_CONFIGURATION.md  Jenkinsfile  LOGGING_STRUCTURE.md  README.md  deploy-commands.js  docker-compose.prod.yml  docker-compose.yml  index.js  package-lock.json  package.json
Front/: README.md
agent/: .env.example  .gitignore  Dockerfile  README.md  TEST_STATUS.md  TEST_SUMMARY.md  TOOL_SYNC_CONFIGURATION.md  config-prod.yaml  config-staging.yaml  config.yaml  pyproject.toml  pytest.ini  setup.sh
agent/src/agent/: agent_runner.py  graph.py  main.py
agent/src/agent/api/: __init__.py  routes.py  tool_sync_controller.py
agent/src/agent/models/: __init__.py  choice.py  test_tool_sync.py  tool_sync.py
agent/src/agent/monitoring/: __init__.py  health_check.py  metrics_service.py  monitor.py  test_sync_recovery_monitoring.py
agent/src/agent/prompts/: README.md  human_confirmation_prompt.txt  main_system_prompt.txt  progress_report_prompt.txt  system_prompt.txt
agent/src/agent/redis/: __init__.py  client.py  tool_publisher.py
agent/src/agent/tools/: __init__.py  discovery.py
agent/src/agent/tools/problem/: __init__.py  problem_tools.py
agent/src/agent/utils/: http_client.py  prompt_loader.py
agent/src/config/: __init__.py  config.yaml  config_loader.py
agent/tests/: README.md  __init__.py  conftest.py  test_agent_runner.py  test_api_routes.py  test_config.py  test_health_check.py  test_metrics_service.py  test_prompt_loader.py  test_redis_client.py  test_runner.py  test_tool_discovery.py  test_tool_publisher.py  test_tool_sync_controller.py  validate_tests.py
ai-backend/: .gitignore  Dockerfile  agent_runner.py  app.py  config.py  graph.py  main.py  requirements.txt  routes.py  tools.py
ai-backend/app/: agent_runner.py  graph.py  main.py  tools.py
backend/: .env.example  .gitignore  Dockerfile  Jenkinsfile  SYNC_RECOVERY_CONFIGURATION.md  build.gradle  docker-compose.yml  gradle.properties  mvnw.cmd  pom.xml  settings.gradle
backend/redis/: CACHE_USAGE.md  REDIS_CONFIGURATION.md  REDIS_METRICS.md  REDIS_PERFORMANCE_TESTS.md
commands/utility/: urbanDictionary.js
frontend/: .env.example  .gitignore  TEST_SUMMARY.md  index.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: README.md  (+3 more)
mcp-server/: .env.example  .gitignore  Dockerfile  config.yaml  pyproject.toml  setup.sh
mcp-server/src/mcp_server/: app.py  config.py  main.py
mcp-server/src/mcp_server/tools/: __init__.py  quip_backend.py  weather.py
redis/: init-redis.sh  redis.conf
scripts/: README.md  deploy-prod.sh  deploy-with-redis.sh  redis-config.sh  utils.sh
(+336 files in other folders)
